--- a/style.css
+++ b/style.css
@@ -135,9 +135,10 @@ body {
     background-color: #e3ebfe;
     color: #183389;
 }
+
 .dlt {
-    background-color: #ffeced!important;
-    color: #db4e51!important;
+    background-color: #ffeced !important;
+    color: #db4e51 !important;
 }
 
 .apply-bg {
@@ -146,16 +147,18 @@ body {
     padding-bottom: 38px;
     background-color: #f9f8fd;
 }
+
 .apply-bg1 {
     border: 1px solid rgb(69, 67, 67);
     padding-top: 10px;
     background-color: #f9f8fd;
 }
+
 .dashed-line {
     border: 1px dashed rgb(126, 117, 117);
 }
 
-.add button{
+.add button {
     background-color: #e3ebff;
     color: #2b3c69;
     font-size: 12px;
@@ -164,19 +167,54 @@ body {
     padding: 5px 15px;
     border-radius: 5px;
 }
-.bt-1{
+
+.add2 {
+    background-color: #0047f9;
+    color: #ffffff;
+    font-size: 12px;
+    font-weight: 800;
+    border: none;
+    padding: 5px 15px;
+    border-radius: 5px;
+}
+
+.close {
+    background-color: #f5f5f8;
+    border: none;
+    border-radius: 50%;
+    padding: 5px;
+    width: 40px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+}
+
+.bt-1 {
     background-color: white;
     border: 1px solid;
     border-radius: 5px;
     padding: 5px 10px;
 }
 
-.bt-2{
+.bt-2 {
     background-color: #0c269a;
     color: white;
     border: 1px solid;
     border-radius: 5px;
     padding: 5px 10px;
+}
+
+p.start {
+    text-align: justify;
+    display: inline;
+    padding: 5px 10px;
+    background-color: #989da0;
+    border-radius: 20px;
+    margin-left: 5px;
+}
+
+h1.start {
+    display: inline-block;
 }
 
 .post {
@@ -239,4 +277,46 @@ body {
 
 .notif-name {
     font-weight: 200;
+}
+
+.indicator {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.indicator .line {
+    position: absolute!important;
+    top: 50%!important;
+    transform: translateY(-50%)!important;
+    height: 4px!important;
+    background: #e91b1b!important;
+    left: 0!important;
+    z-index: 10!important;
+}
+
+.indicator p {
+    position: relative;
+    z-index: ;
+    font-size: 30px;
+    width: 60px;
+    height: 60px;
+    background: #eeefed;
+    color: #8e9ca5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+    border-radius: 50%;
+}
+.active {
+    color: #028e13!important;
+    background-color: #e6f8ea!important;
+}
+.now {
+    color: #012367!important;
+    background-color: #e6e8f5!important;
 }
